--- a/.github/workflows/rproxy_release.yaml
+++ b/.github/workflows/rproxy_release.yaml
@@ -22,6 +22,10 @@ on:
         description: "build binary"
         required: false
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   extract_version:
     name: extract version
@@ -29,13 +33,20 @@ jobs:
     outputs:
       VERSION: ${{ steps.extract_version.outputs.VERSION }}
     steps:
+      - name: checkout the repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: extract version
         id: extract_version
         run: |
+          git describe --tags --always --dirty=-dev --long --match 'v*'
+
           if [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
             VERSION="${GITHUB_REF#refs/tags/}"
           else
-            VERSION="$(echo ${GITHUB_SHA} | cut -c1-7)"
+            VERSION="$( git describe --tags --always --dirty=-dev --long --match 'v*' )"
           fi
           echo "VERSION=${VERSION}" >> $GITHUB_OUTPUT
 
@@ -181,7 +192,7 @@ jobs:
           echo "### release: ${{ env.VERSION }}"               >> $GITHUB_STEP_SUMMARY
           echo "${{ steps.create-release-draft.outputs.url }}" >> $GITHUB_STEP_SUMMARY
 
-  build_container_image:
+  build_container_images:
     if: ${{ (github.ref_type == 'tag') || (github.event.inputs.build_container_image == 'true') }}
     name: build and publish container image
     needs: extract_version
@@ -194,13 +205,18 @@ jobs:
     strategy:
       matrix:
         configs:
-          - target: linux/amd64
+          - platform: linux/amd64
             runner: warp-ubuntu-latest-x64-16x
-          - target: linux/arm64
+          - platform: linux/arm64
             runner: warp-ubuntu-latest-arm64-16x
     steps:
       - name: checkout sources
         uses: actions/checkout@v4
+
+      - name: Set env
+        run: |
+          platform=${{ matrix.configs.platform }}
+          echo "PLATFORM=${platform//\//-}" >> $GITHUB_ENV
 
       - name: setup docker qemu
         uses: docker/setup-qemu-action@v3
@@ -208,7 +224,7 @@ jobs:
       - name: setup docker buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: generate docker metadata
+      - name: generate container metadata
         uses: docker/metadata-action@v5
         id: meta
         with:
@@ -216,12 +232,7 @@ jobs:
           labels: org.opencontainers.image.source=${{ github.repositoryUrl }}
           tags: |
             type=sha
-            type=semver,pattern={{version}},value=${{ env.VERSION }}
-            type=semver,pattern={{major}}.{{minor}},value=${{ env.VERSION }}
-            type=semver,pattern={{major}},value=${{ env.VERSION }}
-
-            # Push latest tag for full version only, not for prerelease versions (i.e. not for v1.2.3-rc1)
-            type=raw,value=latest,enable=${{ !contains(env.VERSION, '-') }}
+            type=raw,value=${{ env.VERSION }}-${{ env.PLATFORM }}
 
       - name: login to ghcr
         uses: docker/login-action@v3
@@ -230,14 +241,77 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: build and push rproxy image
+      - name: build and push image
         uses: docker/build-push-action@v5
+        id: build
         with:
+          push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
           file: Dockerfile
           context: .
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: ${{ matrix.configs.target }}
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          platforms: ${{ matrix.configs.platform }}
+          tags: ghcr.io/${{ github.repository }}:${{ env.VERSION }}-${{ env.PLATFORM }}
+
+      - name: export digest
+        run: |
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests/${digest#sha256:}"
+
+      - name: upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ env.PLATFORM }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+  publish_container_index:
+    name: publish container index
+    runs-on: warp-ubuntu-latest-x64-16x
+    needs:
+      - build_container_images
+      - extract_version
+    steps:
+      - name: download digests
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp/digests
+          pattern: digests-*
+          merge-multiple: true
+
+      - name: setup docker buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: login to ghcr
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: generate container metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository }}
+          labels: org.opencontainers.image.source=${{ github.repositoryUrl }}
+          tags: |
+            type=sha
+            type=raw,value=${{ env.VERSION }}
+
+      - name: create manifest list and push
+        working-directory: /tmp/digests
+        run: |
+          jq -cr '.tags[]' <<< "$DOCKER_METADATA_OUTPUT_JSON" | while read -r tag; do
+            echo "Creating manifest for tag: $tag"
+            docker buildx imagetools create -t $tag $(
+              printf 'ghcr.io/${{ github.repository }}@sha256:%s ' *
+            )
+          done
+
+      - name: inspect image
+        run: |
+          docker buildx imagetools inspect ghcr.io/${{ github.repository }}:${{ steps.meta.outputs.version }}
