--- a/crates/rproxy/Cargo.toml
+++ b/crates/rproxy/Cargo.toml
@@ -17,6 +17,7 @@ actix-ws = "0.3.0"
 alloy-primitives = "1.3.1"
 alloy-rlp = "0.3.12"
 awc = "3.7.0"
+base64 = "0.22.1"
 brotli = "8.0.2"
 bytes = "1.10.1"
 bytestring = "1.5.0"
