fix clippy, add unreachable_pub and other lints

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,12 @@ default-members = ["crates/rproxy"]
 members = [
     "crates/rproxy",
 ]
+
+[workspace.lints.rust]
+unreachable_pub = "deny"
+
+[workspace.lints.clippy]
+match_same_arms = "warn"
+unused_async = "warn"
+uninlined_format_args = "warn"
+manual_let_else = "warn"
