--- a/crates/rproxy/Cargo.toml
+++ b/crates/rproxy/Cargo.toml
@@ -17,6 +17,7 @@ actix-http = { version = "3.11.1", features = ["ws"] }
 actix-tls = "3.4.0"
 actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
 actix-ws = "0.3.0"
+alloy-json-rpc = "1.0.41"
 alloy-primitives = "1.3.1"
 alloy-rlp = "0.3.12"
 awc = "3.7.0"
@@ -31,6 +32,7 @@ futures-core = "0.3.31"
 hex = "0.4.3"
 http = "1.3.1"
 humantime = "2.2.0"
+moka = { version = "0.12.11", features = ["sync"] }
 op-alloy-consensus = "0.20.0"
 parking_lot = "0.12.4"
 pin-project = "1.1.10"
