--- a/crates/rproxy/Cargo.toml
+++ b/crates/rproxy/Cargo.toml
@@ -38,6 +38,7 @@ parking_lot = "0.12.4"
 pin-project = "1.1.10"
 pnet = "0.35.0"
 prometheus-client = { git = "https://github.com/0x416e746f6e/client_rust.git", branch = "nested-labels"}
+rustc-hash = "2.1.1"
 rustls = "0.23.32"
 rustls-pemfile = "2.2.0"
 scc = "3.0.2"
