--- a/crates/rproxy/Cargo.toml
+++ b/crates/rproxy/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rproxy"
-version = "0.0.8"
+version = "0.0.9"
 edition = "2024"
 default-run = "rproxy"
 
@@ -14,6 +14,8 @@ workspace = true
 [dependencies]
 actix = "0.13.5"
 actix-http = { version = "3.11.1", features = ["ws"] }
+actix-server = "2.6.0"
+actix-service = "2.0.3"
 actix-tls = "3.4.0"
 actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
 actix-ws = "0.3.0"
@@ -26,6 +28,7 @@ brotli = "8.0.2"
 bytes = "1.10.1"
 bytestring = "1.5.0"
 clap = { version = "4.5.47", features = ["derive", "env", "wrap_help"] }
+console-subscriber = "0.5.0"
 flate2 = "1.1.2"
 futures = "0.3.31"
 futures-core = "0.3.31"
