--- a/.github/workflows/rproxy_release.yaml
+++ b/.github/workflows/rproxy_release.yaml
@@ -74,9 +74,9 @@ jobs:
       matrix:
         configs:
           - target: x86_64-unknown-linux-gnu
-            runner: warp-ubuntu-latest-x64-32x
+            runner: ubuntu-24.04
           - target: aarch64-unknown-linux-gnu
-            runner: warp-ubuntu-latest-arm64-32x
+            runner: ubuntu-24.04-arm
 
     steps:
       - name: install dependencies
@@ -172,9 +172,9 @@ jobs:
       matrix:
         configs:
           - platform: linux/amd64
-            runner: warp-ubuntu-latest-x64-16x
+            runner: ubuntu-24.04
           - platform: linux/arm64
-            runner: warp-ubuntu-latest-arm64-16x
+            runner: ubuntu-24.04-arm
     steps:
       - name: checkout sources
         uses: actions/checkout@v4
