--- a/crates/rproxy/Cargo.toml
+++ b/crates/rproxy/Cargo.toml
@@ -40,6 +40,7 @@ futures-core = "0.3.31"
 hex = "0.4.3"
 http = "1.3.1"
 humantime = "2.2.0"
+libc = "0.2.177"
 moka = { version = "0.12.11", features = ["sync"] }
 op-alloy-consensus = "0.20.0"
 parking_lot = "0.12.4"
@@ -54,6 +55,7 @@ scc = "3.0.2"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 socket2 = "0.6.0"
+sysctl = "0.7.1"
 thiserror = "2.0.16"
 time = { version = "0.3.43", features = ["formatting"] }
 tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
