--- a/crates/rproxy/Cargo.toml
+++ b/crates/rproxy/Cargo.toml
@@ -59,7 +59,7 @@ sysctl = "0.7.1"
 thiserror = "2.0.16"
 time = { version = "0.3.43", features = ["formatting"] }
 tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
-tokio-tungstenite = "0.27.0"
+tokio-tungstenite = {version = "0.27.0", features = ["rustls-tls-native-roots"] }
 tokio-util = "0.7.16"
 tracing = { version = "0.1.41", features = ["valuable"] }
 tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "valuable"] }
