--- a/crates/rproxy/Cargo.toml
+++ b/crates/rproxy/Cargo.toml
@@ -48,6 +48,7 @@ pin-project = "1.1.10"
 pnet = "0.35.0"
 prometheus-client = { git = "https://github.com/0x416e746f6e/client_rust.git", branch = "nested-labels"}
 rand = { version = "0.9.2", optional = true }
+rlimit = "0.10.2"
 rustc-hash = "2.1.1"
 rustls = "0.23.32"
 rustls-pemfile = "2.2.0"
